--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR" dir="ltr">
     <head>
-        <link rel="manifest" href="/manifest.json">
+        <link rel="manifest" href="/larning_pwa/manifest.json">
         <link rel="stylesheet" href="converter.css">
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
